--- a/src/scss/components/_link.scss
+++ b/src/scss/components/_link.scss
@@ -4,7 +4,7 @@
     font-style: normal;
     font-size: 16px;
     display: inline-flex;
-    
+    cursor: pointer;
     &_color-white {
         color: $gray-100;
         
