fix bugs DO-1549 DO-1550 and fix remarks

--- a/src/scss/components/_landing-dots.scss
+++ b/src/scss/components/_landing-dots.scss
@@ -1,6 +1,7 @@
 .landing-dots {
     background: url('src/img/Vector_3.svg') no-repeat;
     background-position: center top;
-    background-position-y: -14%;
+    // background-position-y: -14%;
+    padding-bottom: 128px;
     overflow: hidden;
 }
