--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -24,6 +24,7 @@
 .input_error {
     color: #EB5757;
     background: #FFFFFF;
-    p#s{ font-size: small; }
+    font-size: small;
+    margin-bottom: 2%;
 }
 
